--- a/sass/core.scss
+++ b/sass/core.scss
@@ -11,7 +11,7 @@ html {
     font-size: 20px;
     line-height: 1.5;
 
-    @media (max-width: $mobile-width + 14em) {
+    @media (max-width: math($mobile-width + 14em)) {
         font-size: 16px;
     }
 }
@@ -34,7 +34,7 @@ h4 {
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 2.5em;
     margin-bottom: 0.25em;
 }
 
@@ -51,6 +51,10 @@ h3::before {
 a {
     color: $cyan;
     text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 p {
