--- a/sass/header.scss
+++ b/sass/header.scss
@@ -24,11 +24,11 @@ $nav-height: 75px;
     width: $content-width;
     padding-top: 10px;
 
-    @media(min-width: $mobile-width + 14em) {
+    @media(min-width: math($mobile-width + 14em)) {
         max-width: $mobile-width;
     }
 
-    @media(max-width: $mobile-width + 14em) {
+    @media(max-width: math($mobile-width + 14em)) {
         padding-left: 1em;
         padding-right: 1em;
         max-width: $mobile-width;
@@ -88,10 +88,14 @@ $nav-height: 75px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    margin: auto;
     z-index: 999;
     text-align: center;
     padding: 2rem 0rem;
+}
+
+.header-bar-content {
+    width: $content-width;
 }
 
 .subtitle,
@@ -100,7 +104,7 @@ $nav-height: 75px;
 }
 
 .subtitle {
-    font-size: 1.25em;
+    font-size: 1.75em;
 }
 
 .home-link {
