--- a/src/includes/scenario.liquid
+++ b/src/includes/scenario.liquid
@@ -4,7 +4,7 @@ type: trains
 ---
 <article id="top" class="page">
     <div class="entry">
-        <p><img src = {{ page.image }} alt = {{ page.alttext }}></p>
+        <p><img src = {{ page.image }} alt = {{ page.alt }}></p>
 
         <b>Traction:</b> {{page.traction}} <br>
         <b>TOC:</b> {{page.toc}} <br>
