--- a/src/includes/index/misc.liquid
+++ b/src/includes/index/misc.liquid
@@ -9,6 +9,6 @@
     <span class="misc-text">A series of entertaining escapades</span>
 </p>
 <p>
-    <span class="misc-link"><a href="/pictures">Railway stations</a></span>
+    <span class="misc-link"><a href="/stations/page-1">Railway stations</a></span>
     <span class="misc-text">I take pictures of station signs</span>
 </p>
