--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -1,22 +1,22 @@
 @import "colours.scss";
+@import "core.scss";
 
 // Pictures
-
 .picture-block {
-    display: flex;
+  display: flex;
 }
 
 .picture-picture {
-    flex: 1;
-    padding: 0 10px;
+  flex: 1;
+  padding: 0 10px;
 }
 
 .picture-caption {
-    width: 30%;
+  width: 30%;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 // Stations
@@ -25,28 +25,40 @@ img {
 }
 
 .station {
-    width: 300px
+  width: 300px;
 }
 
 .station-img {
-    width: 33%;
+  width: 33%;
+
+  @media (max-width: $content-width) {
+    width: 49%;
+  }
 }
 
+// page counter
+
 .counter {
-    margin-top: 25px;
-    text-align: center;
+  margin-top: 25px;
+  text-align: center;
 }
 
 .page-number {
-    margin: 0 5px;
-    font-size: 1.5em;
-    background-color: $accent;
-    padding: 5px 10px;
-    border-radius: 5px;;
-    font-family: monospace;
+  margin: 0 5px;
+  font-size: 1.5em;
+  background-color: $accent;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-family: monospace;
 }
 
 .current-page {
-    color: $pink;
-    font-weight: bold;
+  color: $pink;
+  font-weight: bold;
+}
+
+// redirects
+
+.redirect {
+  text-align: center;
 }
