Got a nice tag system working

--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -14,6 +14,8 @@
   <title>
     {% if title == "Home" %}
     {{ site.title }} &middot; {{ site.tagline }}
+    {% elsif series %}
+    {{ series }}: {{ part }}
     {% else %}
     {{ title }} &middot; {{ site.title }}
     {% endif %}
