--- a/src/includes/components/title.liquid
+++ b/src/includes/components/title.liquid
@@ -27,9 +27,9 @@
     {% if tags.size > 0 %}
     <div class="post-tags">
       {% for tag in tags %}
-      <span class="post-tag">
-        {{- tag -}}
-      </span>
+      {% if tag != "blog" %}
+      {% include components/tag %}
+      {% endif %}
       {% endfor %}
     </div>
     {% endif %}
