Fixed some of the blog links

--- a/src/includes/index/misc.liquid
+++ b/src/includes/index/misc.liquid
@@ -5,7 +5,7 @@
     <span class="misc-text">Pictures of me</span>
 </p>
 <p>
-    <span class="misc-link"><a href="/adventures-in-academia">Adventures in Academia</a></span>
+    <span class="misc-link"><a href="/adventures">Adventures in Academia</a></span>
     <span class="misc-text">A series of entertaining escapades</span>
 </p>
 <p>
