--- a/sass/core.scss
+++ b/sass/core.scss
@@ -31,11 +31,21 @@ h2,
 h3,
 h4 {
   color: $green;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 h2 {
   font-size: 2.5em;
   margin-bottom: 0.25em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5em;
 }
 
 h2::before,
@@ -65,6 +75,20 @@ p {
 
 img {
   border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+thead {
+  font-weight: bold;
+  background-color: $accent;
+}
+
+td {
+  padding: 0.25em 0.5rem;
 }
 
 .container {
