--- a/sass/header.scss
+++ b/sass/header.scss
@@ -94,7 +94,7 @@ $nav-height: 75px;
 }
 
 .header-bar-content {
-  width: $content-width;
+  max-width: $content-width;
   display: flex;
   flex-direction: column;
   align-items: center;
