--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -63,7 +63,7 @@ img {
   text-align: center;
 }
 
-// scenarios
+// scenario
 
 .scenario-info {
   margin-bottom: 10px;
@@ -89,4 +89,27 @@ table.timetable > tbody > tr > td {
 
 .call-location {
   font-weight: bold;
+}
+
+// scenarios
+
+.small-scenario {
+}
+
+.scenario-preview {
+  display: flex;
+  flex-direction: column;
+  width: 49%;
+}
+
+.scenario-title {
+  font-size: 1.25em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.scenario-last-updated {
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 15px;
 }
