--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -1,3 +1,7 @@
+<div class="mobile-profile-picture">
+    <img src={{ people.me.picture }} />
+</div>
+
 <p>
     <img class="profile-picture" src={{ people.me.picture }} />
     Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of <a
