--- a/src/includes/components/nav.liquid
+++ b/src/includes/components/nav.liquid
@@ -1,13 +1,13 @@
-<div class="nav-bar">
-    <div class="nav-bar-content wide">
+<div class="nav-bar desktop">
+    <div class="container nav-bar-content wide">
         <div class="left-nav">
             {% if page.title == "Home" %}
             <a href="#top">
                 {% else %}
-                <a href="/">
+                <a class="site-name-box" href="/">
                     {% endif %}
-                    <div class=" site-name">
-                        <div><img class="nav-site-image" src="{{ people.me.picture }}" alt="me"></div>
+                    <div class="site-name">
+                        <img class="nav-site-image" src="{{ people.me.picture }}" alt="me">
                         <div class="nav-bar-title pink-text">George Kaye</div>
                     </div>
                 </a>
@@ -30,9 +30,9 @@
             {% endif %}
         </div>
     </div>
-    <div class="mobile mobile-nav">
-        {% for link in nav.all-links %}
-        <div class="nav-link"><a href={{ link.target }}>{{ link.title }}</a></div>
-        {% endfor %}
-    </div>
+</div>
+<div class="nav-bar-mobile">
+    {% for link in nav.all-links %}
+    <div class="nav-link"><a href={{ link.target }}>{{ link.title }}</a></div>
+    {% endfor %}
 </div>
