Updated eleventy workflow to act on develop

--- a/src/includes/blog-entry.liquid
+++ b/src/includes/blog-entry.liquid
@@ -34,7 +34,7 @@
             {{ post.data.tagline }}
             </div>
             <div class="post-readmore">
-                <a href={{ post.url }} title="Read blog post '{{ post.title }}'>Read more</a>
+                <a href={{ post.url }} title="Read blog post '{{ post.title }}'">Read more</a>
             </div>
         </div> 
   </div>
