--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -34,7 +34,7 @@
     rel="stylesheet">
 
   <!-- Icons -->
-  <link rel="icon" href="{{ site.baseurl }}favicon.ico" type="image/ico" />
+  <link rel="icon" href="/images/favicon.ico" type="image/ico" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124613172-1"></script>
