--- a/src/includes/default.liquid
+++ b/src/includes/default.liquid
@@ -15,9 +15,19 @@
     {{ content }}
   </div>
 
-  <link rel="shortcut icon" type="image/png" href="/favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/scripts/scripts.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124613172-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-124613172-1');
+  </script>
 
 </body>
 
