Made some accessibility adjustments

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -1,9 +1,9 @@
 <div class="mobile-profile-picture">
-    <img src={{ people.me.picture }} />
+    <img src={{ people.me.picture }} alt="A picture of me, with the Forth Bridge in the background" />
 </div>
 
 <p>
-    <img class="profile-picture" src={{ people.me.picture }} />
+    <img class="profile-picture" alt="A picture of me, with the Forth Bridge in the background" src={{ people.me.picture }} />
     Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of <a
         href={{ people.dan.web }} title="Dan Ghica's personal webpage">
         Dan Ghica
