--- a/src/includes/index/about.liquid
+++ b/src/includes/index/about.liquid
@@ -8,7 +8,7 @@
     On a more practical side, I enjoy making and experimenting with visualisers for various theoretical concepts.
 </p>
 
-<img style="text-align:center" src="images/circuit.svg">
+<img style="text-align:center" alt="A cospan of hypergraphs: on the left is a box with two black dots labelled 1 and 2; in the centre is a hypergraphs with black dots labelled 1 and 2 on the left, and 3 and 4 on the right, and boxes labelled f and g; on the right is a box with two black dots labelled 3 and 4." src="images/circuit.svg">
 
 <p>
     Currently I am working on a diagrammatic semantics for digital circuits, motivated by the work of Ghica and Jung
