--- a/src/includes/index/misc.liquid
+++ b/src/includes/index/misc.liquid
@@ -2,7 +2,7 @@
 
 {% for link in misc %}
 <p>
-    <span class="misc-link"><a href="{{ link.target }}" title="{{ link.page }}">{{ link.page }}</a></span>
+    <span class="misc-link"><a href="{{ link.target }}">{{ link.page }}</a></span>
     <span class="misc-text">{{ link.text }}</span>
 </p>
 {% endfor %}
