Added contribution section

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -20,6 +20,11 @@
 
 <h3>Contact me</h3>
 
-<p><b>University:</b> {{ people.me.email }}</p>
+<ul>
+    <li>{{ people.me.email }}</li>
+    <li>{{ people.me.address }}</li>
+</ul>
 
-<p><b>Where to find me:</b> {{ people.me.address }}</p>
+<h3>Contributing</h3>
+
+If you find a mistake, you can fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!
