--- a/src/includes/post.liquid
+++ b/src/includes/post.liquid
@@ -1,5 +1,6 @@
 ---
 layout: default
+style: blog
 permalink: /blog/{% if dir %}{{ dir }}/{{ part | slug }}{% elsif series %}{{ series | slug }}/{{ part | slug }}{% else %}{{ title | slug }}{% endif %}/
 ---
 
@@ -10,25 +11,6 @@ permalink: /blog/{% if dir %}{{ dir }}/{{ part | slug }}{% elsif series %}{{ ser
   {{ content }}
 </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-    <li>
-      <a href="{{ post.url }}">
-        <span class="post-title-small">
-          {{ post.title }}
-        </span>yar
-        <span class="post-subtitle-small">{{ post.subtitle }}</span>
-        <span>
-          <time datetime="{{ post.date | date_to_xmlschema }}" class="post-date">{{ post.date | date_to_string }}</time>
-        </span>
-      </a>
-      </h3>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
 {% if page.disclaimer %}
 <div class="footnote">{{ page.disclaimer }}</div>
 {% endif %}
