Removed an exclamation mark because my mother told me to

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -8,14 +8,12 @@
         href={{ people.dan.web }} title="Dan Ghica's personal webpage">
         Dan Ghica
     </a> and
-    <a href={{ people.miriam.web }} title="Miriam Backens' personal webpage">Miriam Backens</a>!
+    <a href={{ people.miriam.web }} title="Miriam Backens' personal webpage">Miriam Backens</a>.
 </p>
 
 <p>
     I am a member of the
-    <a href={{ links.theory }} title="University of Birmingham Theory Group webpage">
-        University of Birmingham Theory Group
-    </a>.
+    <a href={{ links.theory }} title="University of Birmingham Theory Group webpage">University of Birmingham Theory Group</a>.
 </p>
 
 <h3>Contact me</h3>
