--- a/src/includes/components/title.liquid
+++ b/src/includes/components/title.liquid
@@ -28,7 +28,7 @@
     <div class="post-tags">
       {% for tag in tags %}
       {% if tag != "blog" %}
-      {% include components/tag %}
+      {% include "components/tag" %}
       {% endif %}
       {% endfor %}
     </div>
