--- a/src/includes/default.liquid
+++ b/src/includes/default.liquid
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-{% include components/head %}
+{% include "components/head" %}
 
 <body>
 
-  {% include components/nav %}
+  {% include "components/nav" %}
   <div class="spacer">
     &nbsp;
   </div>
-  {% include components/title %}
+  {% include "components/title" %}
 
   <div id="text" class="content container wide">
     {{ content }}
