--- a/src/includes/blog-entry.liquid
+++ b/src/includes/blog-entry.liquid
@@ -20,7 +20,7 @@
             {% if post.data.date %}<span class="post-date">{{ post.data.date | prettyDate }}</span>{% endif %}
             {% for tag in post.data.tags %}
             {% if tag != "blog" %}
-            {% include components/tag %}
+            {% include "components/tag" %}
             {% endif %}
             {% endfor %}
         </div>
