--- a/src/includes/components/pagenumbers.liquid
+++ b/src/includes/components/pagenumbers.liquid
@@ -1,7 +1,8 @@
 <div class="counter">
     {%- for page in pagination.pages -%}
-    <a href="{{- pagination.hrefs[forloop.index0] -}}" title="Page {{ forloop.index }}"><span class="page-number{% if pagination.pageNumber == forloop.index0 %} current-page" aria-current="page{%- endif -%}">
+    <div>
+        <a href="{{- pagination.hrefs[forloop.index0] -}}" title="Page {{ forloop.index }}"><span class="page-number{% if pagination.pageNumber == forloop.index0 %} current-page" aria-current="page{%- endif -%}">
     {{- forloop.index -}}
-    </span></a>
+    </span></a></div>
     {%- endfor -%}
 </div>
