--- a/src/includes/components/tag-pagenumbers.liquid
+++ b/src/includes/components/tag-pagenumbers.liquid
@@ -2,7 +2,9 @@
     {% assign max="{{ tag.pages }}" %}
     {%- for i in (1..max) -%}
     {% if i != 1 %}{% assign num={{ i }}/ %}{% endif %}
-    <a href="/blog/{{ tag.tagName }}/{{ num }}" title="Page {{ forloop.index }}"><span class="page-number{% if tag.pageNumber == forloop.index0 %} current-page" aria-current="page{%- endif -%}">
+    <div>
+        <a href="/blog/{{ tag.tagName }}/{{ num }}" title="Page {{ forloop.index }}"><span class="page-number{% if tag.pageNumber == forloop.index0 %} current-page" aria-current="page{%- endif -%}">
+    </div>
     {{- i -}}
     </span></a>
     {%- endfor -%}
