Fix news and added issues page link

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -25,4 +25,5 @@
 
 <h3>Contributing</h3>
 
-If you find a mistake, you can fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!
+If you find a mistake, make an <a href="https://github.com/georgejkaye/georgejkaye.github.io/issues" title="GitHub issues page for this website">issue</a> and I'll try to sort it out.
+Alternatively, you can fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!
