--- a/sass/core.scss
+++ b/sass/core.scss
@@ -102,7 +102,8 @@ td {
   padding: 0.25em 0.5rem;
 }
 
-.container {
+.container,
+.header-bar-content {
   margin: auto;
 
   @media (min-width: ($mobile-width + $buffer)) {
