--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="/css/core.css" />
   <link rel="stylesheet" href="/css/{{ style }}.css" />
   <link rel="stylesheet" href="/css/header.css" />
+  <link rel="stylesheet" href="/css/syntax.css" />
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
